--- a/tutorials/nb_glm.ipynb
+++ b/tutorials/nb_glm.ipynb
@@ -29,18 +29,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/david.fischer/miniconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/david.fischer/miniconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import batchglm.api as glm"
    ]
@@ -68,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = glm.models.nb_glm.Simulator(num_features=100)\n",
+    "sim = glm.models.glm_nb.Simulator(num_features=100)\n",
     "sim.generate()"
    ]
   },
@@ -87,14 +76,14 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray 'X' (observations: 2000, features: 100)>\n",
-       "array([[ 8254,  3672,  7229, ...,  5280,  4970,  2834],\n",
-       "       [ 3572,  2617,  2694, ...,  7652, 14224,  7996],\n",
-       "       [ 5296,  1181,  7092, ..., 13695, 11411,  8449],\n",
+       "<xarray.DataArray 'X' (observations: 1000, features: 100)>\n",
+       "array([[ 592,  446,  472, ...,  686,  166,  460],\n",
+       "       [1040,  436,  545, ..., 1999, 1014,  548],\n",
+       "       [ 355, 1246, 1169, ...,  362,  111,  260],\n",
        "       ...,\n",
-       "       [18975, 27843,  1542, ..., 17310, 19900,  4840],\n",
-       "       [11797,  2158,  5167, ..., 14480, 12826,  6834],\n",
-       "       [31153,  2301,  1394, ..., 10736, 16736,  4827]])\n",
+       "       [ 351,  487, 2142, ...,   43,  664, 1656],\n",
+       "       [ 836,  397, 1643, ...,  339,  729, 1277],\n",
+       "       [ 406,  752, 1903, ...,  136, 1616,  538]])\n",
        "Dimensions without coordinates: observations, features"
       ]
      },
@@ -118,11 +107,11 @@
        "array([[1., 0., 0., 0., 0.],\n",
        "       [1., 0., 0., 0., 1.],\n",
        "       [1., 0., 0., 1., 0.],\n",
-       "       [1., 0., 0., 1., 1.],\n",
        "       [1., 0., 1., 0., 0.],\n",
-       "       [1., 0., 1., 0., 1.],\n",
        "       [1., 1., 0., 0., 0.],\n",
-       "       [1., 1., 0., 0., 1.]])"
+       "       [1., 1., 0., 0., 1.],\n",
+       "       [1., 1., 0., 1., 0.],\n",
+       "       [1., 1., 1., 0., 0.]])"
       ]
      },
      "execution_count": 6,
@@ -145,11 +134,11 @@
        "array([[1., 0., 0., 0., 0.],\n",
        "       [1., 0., 0., 0., 1.],\n",
        "       [1., 0., 0., 1., 0.],\n",
-       "       [1., 0., 0., 1., 1.],\n",
        "       [1., 0., 1., 0., 0.],\n",
-       "       [1., 0., 1., 0., 1.],\n",
        "       [1., 1., 0., 0., 0.],\n",
-       "       [1., 1., 0., 0., 1.]])"
+       "       [1., 1., 0., 0., 1.],\n",
+       "       [1., 1., 0., 1., 0.],\n",
+       "       [1., 1., 1., 0., 0.]])"
       ]
      },
      "execution_count": 7,
@@ -176,14 +165,19 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray 'a' (design_loc_params: 5, features: 100)>\n",
-       "array([[ 8.806215,  8.083441,  8.958677, ...,  8.969354,  9.082994,  8.942818],\n",
-       "       [ 0.115385,  0.650169,  0.676358, ...,  0.417252,  0.072147,  0.18195 ],\n",
-       "       [-0.337574,  0.362238,  0.591211, ..., -0.56396 ,  0.536657,  0.626756],\n",
-       "       [ 0.6179  ,  0.681902,  0.228461, ...,  0.215373,  0.615605, -0.14967 ],\n",
-       "       [ 0.07716 ,  0.439423, -0.636067, ...,  0.017376,  0.134838, -0.273974]])\n",
+       "<xarray.DataArray (design_loc_params: 5, features: 100)>\n",
+       "array([[ 6.236370e+00,  6.249975e+00,  6.285998e+00, ...,  6.228511e+00,\n",
+       "         6.257668e+00,  6.326149e+00],\n",
+       "       [ 2.049018e-01,  2.693441e-01,  6.121345e-01, ...,  5.915393e-01,\n",
+       "         6.811870e-01, -4.860269e-03],\n",
+       "       [ 3.234056e-01,  1.514454e-02,  4.739485e-02, ...,  1.575983e-01,\n",
+       "         3.081887e-01,  5.101046e-01],\n",
+       "       [ 1.487480e-02,  7.693484e-03, -3.710693e-01, ..., -9.910821e-02,\n",
+       "         6.230951e-01,  5.508496e-02],\n",
+       "       [ 2.107061e-01,  2.657196e-02,  5.290659e-01, ..., -6.421812e-01,\n",
+       "        -8.659752e-02,  6.675474e-01]])\n",
        "Coordinates:\n",
-       "  * design_loc_params  (design_loc_params) <U14 'Intercept' 'batch[T.1]' ...\n",
+       "  * design_loc_params  (design_loc_params) object 'Intercept' ... 'batch[T.3]'\n",
        "Dimensions without coordinates: features"
       ]
      },
@@ -204,14 +198,14 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.DataArray 'b' (design_scale_params: 5, features: 100)>\n",
-       "array([[ 2.197225,  0.      ,  1.791759, ...,  1.098612,  1.386294,  2.197225],\n",
-       "       [ 0.035024, -0.157254,  0.467061, ...,  0.54539 , -0.552892,  0.422423],\n",
-       "       [ 0.254288,  0.260412,  0.649432, ...,  0.105473, -0.117756, -0.043436],\n",
-       "       [ 0.453221, -0.189692, -0.017939, ..., -0.419644, -0.31896 ,  0.360347],\n",
-       "       [-0.277178, -0.259578, -0.107434, ...,  0.104903,  0.070054, -0.399334]])\n",
+       "<xarray.DataArray (design_scale_params: 5, features: 100)>\n",
+       "array([[ 0.663148,  0.388968, -0.029529, ...,  0.533484,  0.523392,  0.330428],\n",
+       "       [ 0.430409,  0.641547,  0.270136, ..., -0.093337,  0.65314 ,  0.055318],\n",
+       "       [ 0.3044  ,  0.475201,  0.449178, ..., -0.258936,  0.582445, -0.088318],\n",
+       "       [ 0.487693,  0.435016,  0.588147, ...,  0.231171,  0.336771, -0.341528],\n",
+       "       [-0.576247, -0.144176,  0.43414 , ..., -0.504932,  0.433781,  0.677088]])\n",
        "Coordinates:\n",
-       "  * design_scale_params  (design_scale_params) <U14 'Intercept' 'batch[T.1]' ...\n",
+       "  * design_scale_params  (design_scale_params) object 'Intercept' ... 'batch[T.3]'\n",
        "Dimensions without coordinates: features"
       ]
      },
@@ -242,7 +236,42 @@
     "design_scale = sim.design_scale\n",
     "\n",
     "# input data\n",
-    "input_data = glm.models.nb_glm.InputData.new(data=X, design_loc=design_loc, design_scale=design_scale)"
+    "input_data = glm.models.glm_nb.InputData.new(data=X, design_loc=design_loc, design_scale=design_scale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[batchglm.models.base_glm.input.InputData object at 0x7f0d4787c320]: data=<xarray.Dataset>\n",
+       "    Dimensions:              (design_loc_params: 5, design_scale_params: 5, features: 100, loc_params: 5, observations: 1000, scale_params: 5)\n",
+       "    Coordinates:\n",
+       "      * observations         (observations) int64 0 1 2 3 4 ... 995 996 997 998 999\n",
+       "        feature_allzero      (features) bool False False False ... False False False\n",
+       "      * features             (features) int64 0 1 2 3 4 5 6 ... 93 94 95 96 97 98 99\n",
+       "      * design_loc_params    (design_loc_params) object 'Intercept' ... 'batch[T.3]'\n",
+       "      * design_scale_params  (design_scale_params) object 'Intercept' ... 'batch[T.3]'\n",
+       "        loc_params           (design_loc_params) object 'Intercept' ... 'batch[T.3]'\n",
+       "        scale_params         (design_scale_params) object 'Intercept' ... 'batch[T.3]'\n",
+       "    Data variables:\n",
+       "        X                    (observations, features) int64 592 446 472 ... 1616 538\n",
+       "        design_loc           (observations, design_loc_params) float64 1.0 ... 1.0\n",
+       "        design_scale         (observations, design_scale_params) float64 1.0 ... 1.0\n",
+       "        constraints_loc      (design_loc_params, loc_params) float64 1.0 0.0 ... 1.0\n",
+       "        constraints_scale    (design_scale_params, scale_params) float64 1.0 ... 1.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_data"
    ]
   },
   {
@@ -254,70 +283,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using closed-form MLE initialization for mean\n",
-      "RMSE of closed-form mean:\n",
-      "[1.21777045e-04 1.51540194e-03 5.47320002e-04 3.70358114e-03\n",
-      " 1.16360710e-03 1.26262986e-02 2.13019045e-04 6.97138934e-03\n",
-      " 1.77815910e-03 2.26710994e-04 1.15609775e-03 2.51648449e-04\n",
-      " 1.41579701e-03 4.93907164e-04 1.18967855e-04 6.93461858e-04\n",
-      " 1.18602169e-03 2.10866936e-03 3.20415021e-03 3.57594707e-04\n",
-      " 2.75920184e-03 3.46467232e-04 3.16634623e-03 1.12906172e-03\n",
-      " 4.49988536e-03 7.72149491e-03 1.13673603e-03 1.33255063e-03\n",
-      " 1.08078349e-04 5.88724731e-03 1.55051888e-02 1.04069028e-03\n",
-      " 3.37859656e-04 2.23879080e-03 4.55242838e-04 8.41768549e-03\n",
-      " 1.28355095e-03 5.97037823e-04 3.61962280e-03 6.94334802e-04\n",
-      " 4.93019376e-04 4.61909142e-04 1.13183544e-02 2.10359005e-03\n",
-      " 1.56217164e-03 4.51902069e-04 1.04927533e-03 1.56825573e-03\n",
-      " 2.05945749e-03 1.45147367e-03 6.77560596e-04 2.13429478e-03\n",
-      " 5.05332923e-04 1.00493856e-03 1.70805258e-03 2.54676581e-03\n",
-      " 1.21753341e-03 5.14141976e-03 2.55480790e-03 7.94424344e-04\n",
-      " 1.27736547e-03 1.20192957e-04 1.65402818e-03 7.86708778e-04\n",
-      " 8.46310334e-05 1.51383529e-03 6.43679503e-03 5.76779394e-03\n",
-      " 2.03335088e-03 1.99461298e-02 5.61429233e-04 1.36123483e-03\n",
-      " 2.74039453e-03 6.43798539e-04 2.80987850e-04 1.36724784e-04\n",
-      " 1.18175208e-02 1.64143626e-03 1.36464284e-04 4.08249451e-04\n",
-      " 8.16754478e-04 1.98121846e-03 1.65755005e-03 6.10166318e-03\n",
-      " 2.31143535e-03 1.57847577e-03 1.01143906e-02 1.62772280e-04\n",
-      " 1.01067871e-03 1.13378080e-02 1.36075332e-02 4.03482587e-03\n",
-      " 1.46298472e-03 2.01416061e-03 3.45626524e-03 5.25829497e-03\n",
-      " 5.77073594e-04 3.50281269e-03 6.75201200e-04 1.83402610e-03]\n",
-      "Should train mu: True\n",
-      "Using closed-form MME initialization for dispersion\n",
-      "RMSE of closed-form dispersion:\n",
-      "[0.01287664 0.04994481 0.06191098 0.02255841 0.03324018 0.00599477\n",
-      " 0.01140436 0.03190672 0.07026999 0.02096582 0.01080945 0.0076364\n",
-      " 0.03581355 0.04373168 0.02438652 0.04688681 0.0194309  0.00309402\n",
-      " 0.04134449 0.06069283 0.04321127 0.0097485  0.02378122 0.07492138\n",
-      " 0.01761236 0.00922304 0.04619224 0.03100436 0.0235271  0.0017943\n",
-      " 0.1080419  0.01973455 0.01960148 0.00250855 0.05799934 0.04795767\n",
-      " 0.07942515 0.03730298 0.03088631 0.01565974 0.01092115 0.00871206\n",
-      " 0.02874796 0.01391591 0.03657679 0.00970466 0.02851762 0.05237752\n",
-      " 0.09039323 0.04225993 0.03699762 0.01908542 0.01023065 0.01964059\n",
-      " 0.04211861 0.00682695 0.01232376 0.07077296 0.00669901 0.01192206\n",
-      " 0.00142929 0.01091504 0.04497585 0.04379757 0.02482964 0.03261666\n",
-      " 0.04020535 0.04188679 0.00206018 0.08920832 0.04198381 0.01483758\n",
-      " 0.08794092 0.02259121 0.00398129 0.01437305 0.11775262 0.05304488\n",
-      " 0.0125809  0.0116098  0.02921739 0.00976936 0.00615631 0.01590012\n",
-      " 0.00734133 0.01459689 0.03592817 0.01676457 0.00969331 0.04633008\n",
-      " 0.01939847 0.05433613 0.00865478 0.03391115 0.00337652 0.02724792\n",
-      " 0.0307377  0.01248376 0.00652125 0.06693044]\n",
-      "Should train r: True\n",
-      "Graph was finalized.\n",
-      "Running local_init_op.\n",
-      "Done running local_init_op.\n"
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-4947ae74a0c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglm_nb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEstimator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#estimator.initialize()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Praktikum/batchglm/batchglm/train/tf/glm_nb/estimator.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, input_data, batch_size, graph, init_model, init_a, init_b, quick_scale, model, provide_optimizers, provide_batched, termination_type, extended_summary, dtype)\u001b[0m\n\u001b[1;32m    116\u001b[0m             \u001b[0mextended_summary\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mextended_summary\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m             \u001b[0mnoise_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"nb\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m             \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    119\u001b[0m         )\n\u001b[1;32m    120\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Praktikum/batchglm/batchglm/train/tf/base_glm_all/estimator.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, input_data, batch_size, graph, init_a, init_b, model, provide_optimizers, provide_batched, termination_type, extended_summary, noise_model, dtype)\u001b[0m\n\u001b[1;32m    188\u001b[0m                 \u001b[0mextended_summary\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mextended_summary\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m                 \u001b[0mnoise_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnoise_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m                 \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m             )\n\u001b[1;32m    192\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Praktikum/batchglm/batchglm/train/tf/base_glm_all/estimator_graph.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, fetch_fn, feature_isnonzero, num_observations, num_features, num_design_loc_params, num_design_scale_params, num_loc_params, num_scale_params, constraints_loc, constraints_scale, graph, batch_size, init_a, init_b, train_loc, train_scale, provide_optimizers, provide_batched, termination_type, extended_summary, noise_model, dtype)\u001b[0m\n\u001b[1;32m    514\u001b[0m             \u001b[0;31m# Check whether it is necessary to compute FIM:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    515\u001b[0m             \u001b[0;31m# The according sub-graphs are only compiled if this is needed during training.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 516\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mprovide_optimizers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"irls\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mprovide_optimizers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"irls_tr\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    517\u001b[0m                 \u001b[0mprovide_fim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    518\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
    "source": [
-    "estimator = glm.models.nb_glm.Estimator(input_data)\n",
-    "estimator.initialize()"
+    "estimator = glm.models.glm_nb.Estimator(input_data)\n",
+    "#estimator.initialize()"
    ]
   },
   {
@@ -1217,9 +1203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (batchglm)",
    "language": "python",
-   "name": "python3"
+   "name": "batchglm"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1231,7 +1217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
