--- a/tutorials/nb_glm.ipynb
+++ b/tutorials/nb_glm.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import datetime\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,24 +75,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<xarray.DataArray 'X' (observations: 1000, features: 100)>\n",
-       "array([[1310,  783,   35, ...,  229,  217,  283],\n",
-       "       [1056,  589,  368, ...,   16,  101,   39],\n",
-       "       [ 620,  734,  546, ...,    0,  536,  101],\n",
+       "array([[ 232,  554,  292, ...,  115,  303,  761],\n",
+       "       [ 548,  357,  381, ...,  364,  672,  670],\n",
+       "       [ 518,  122,  628, ...,  480,  273,  187],\n",
        "       ...,\n",
-       "       [1126, 1921,  738, ...,  134,    1,  125],\n",
-       "       [ 828, 1255,  650, ...,   79,   82,  236],\n",
-       "       [1520,  861, 1182, ...,  112,   21,  404]])\n",
+       "       [ 294,  245,  585, ...,  754, 2158,  766],\n",
+       "       [1411,   19,  306, ...,  188,  544,  584],\n",
+       "       [ 108,   30,  477, ...,  535, 1001,  844]])\n",
        "Dimensions without coordinates: observations, features"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +119,7 @@
        "       [1., 1., 1., 0., 0.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +146,7 @@
        "       [1., 1., 1., 0., 0.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,29 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<xarray.DataArray (design_loc_params: 5, features: 100)>\n",
-       "array([[ 6.306275e+00,  6.244167e+00,  6.214608e+00, ...,  6.267201e+00,\n",
-       "         6.200509e+00,  6.282267e+00],\n",
-       "       [ 4.150898e-01,  2.989900e-01, -8.960187e-02, ...,  3.348734e-01,\n",
-       "         3.808046e-01, -3.055372e-01],\n",
-       "       [ 5.226297e-01, -1.717118e-01,  4.361976e-01, ..., -8.599905e-03,\n",
-       "         3.547844e-01,  2.666716e-01],\n",
-       "       [-3.557619e-03,  1.538305e-01,  2.388673e-01, ...,  6.926696e-01,\n",
-       "         1.445147e-01,  1.726720e-01],\n",
-       "       [ 8.409922e-02,  5.777250e-01,  5.055840e-01, ..., -5.594666e-01,\n",
-       "         4.193475e-01,  3.187674e-01]])\n",
+       "array([[ 6.212606,  6.259581,  6.194405, ...,  6.214608,  6.202536,  6.126869],\n",
+       "       [ 0.008286, -0.66597 , -0.258192, ...,  0.250405,  0.592159,  0.492965],\n",
+       "       [ 0.237772,  0.496428, -0.083513, ...,  0.389086,  0.382781, -0.374124],\n",
+       "       [-0.361429,  0.110296, -0.619197, ...,  0.497508,  0.176477, -0.076254],\n",
+       "       [-0.485264,  0.482937,  0.451294, ..., -0.213904,  0.280149,  0.48521 ]])\n",
        "Coordinates:\n",
        "  * design_loc_params  (design_loc_params) object 'Intercept' ... 'batch[T.3]'\n",
        "Dimensions without coordinates: features"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,24 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<xarray.DataArray (design_scale_params: 5, features: 100)>\n",
-       "array([[ 0.210112,  0.543395,  0.617367, ..., -0.412905, -0.451211,  0.58719 ],\n",
-       "       [ 0.571239,  0.453361,  0.271927, ..., -0.112064, -0.266357, -0.222001],\n",
-       "       [ 0.409294,  0.532595,  0.168298, ...,  0.656426,  0.25236 , -0.152015],\n",
-       "       [-0.043578, -0.307193,  0.464835, ...,  0.185886,  0.440739,  0.525042],\n",
-       "       [ 0.646874, -0.569399,  0.68175 , ...,  0.065997,  0.175608,  0.495903]])\n",
+       "array([[ 0.628964,  0.380663, -0.180962, ...,  0.648771,  0.655523,  0.528559],\n",
+       "       [-0.475378, -0.065375,  0.649745, ...,  0.017356,  0.619811,  0.638862],\n",
+       "       [-0.045476,  0.019085,  0.525502, ..., -0.303837, -0.489012, -0.13816 ],\n",
+       "       [ 0.434237, -0.149537,  0.186041, ..., -0.120215,  0.439335, -0.632505],\n",
+       "       [-0.387223, -0.404339,  0.374715, ...,  0.584082,  0.346951,  0.249889]])\n",
        "Coordinates:\n",
        "  * design_scale_params  (design_scale_params) object 'Intercept' ... 'batch[T.3]'\n",
        "Dimensions without coordinates: features"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,19 +335,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Step: 0 loss: 735.288950 models converged 0\n",
-      "INFO:tensorflow:Step: 1 loss: 731.097275, converged 0 in 0.938 sec., updated 100, {f: 0, g: 0, x: 0}\n",
-      "INFO:tensorflow:Step: 2 loss: 730.722463, converged 0 in 0.427 sec., updated 100, {f: 0, g: 0, x: 0}\n",
-      "INFO:tensorflow:Step: 3 loss: 730.716881, converged 6 in 0.42 sec., updated 100, {f: 6, g: 1, x: 0}\n",
-      "INFO:tensorflow:Step: 4 loss: 730.716875, converged 91 in 0.414 sec., updated 91, {f: 82, g: 74, x: 50}\n",
-      "INFO:tensorflow:Step: 5 loss: 730.716875, converged 100 in 0.421 sec., updated 9, {f: 9, g: 9, x: 9}\n"
+      "INFO:tensorflow:Step: 0 loss: 731.243285 models converged 0\n",
+      "INFO:tensorflow:Step: 1 loss: 727.064607, converged 0 in 0.932 sec., updated 100, {f: 0, g: 0, x: 0}\n",
+      "INFO:tensorflow:Step: 2 loss: 726.678380, converged 0 in 0.412 sec., updated 100, {f: 0, g: 0, x: 0}\n",
+      "INFO:tensorflow:Step: 3 loss: 726.672260, converged 12 in 0.435 sec., updated 100, {f: 12, g: 0, x: 0}\n",
+      "INFO:tensorflow:Step: 4 loss: 726.672252, converged 93 in 0.453 sec., updated 84, {f: 77, g: 69, x: 41}\n",
+      "INFO:tensorflow:Step: 5 loss: 726.672252, converged 100 in 0.458 sec., updated 6, {f: 6, g: 6, x: 5}\n"
      ]
     }
    ],
@@ -362,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -372,8 +376,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-70c745023cf3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma_var\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Praktikum/batchglm/batchglm/train/tf/base_glm_all/estimator.py\u001b[0m in \u001b[0;36ma_var\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    355\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    356\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0ma_var\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 357\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_xarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a_var\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    358\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    359\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-23-70c745023cf3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma_var\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Praktikum/batchglm/batchglm/train/tf/base_glm_all/estimator.py\u001b[0m in \u001b[0;36ma_var\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    356\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    357\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0ma_var\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 358\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_xarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a_var\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    359\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    360\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Praktikum/batchglm/batchglm/models/base/model.py\u001b[0m in \u001b[0;36mto_xarray\u001b[0;34m(self, parm, coords)\u001b[0m\n\u001b[1;32m     57\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdims\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcoords\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m                         \u001b[0moutput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoords\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcoords\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m             \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mparm\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/batchglm/lib/python3.6/site-packages/xarray/core/coordinates.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/batchglm/lib/python3.6/site-packages/xarray/core/coordinates.py\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     91\u001b[0m         coords = merge_coords([self.variables, other_vars],\n\u001b[1;32m     92\u001b[0m                               priority_arg=1, indexes=self.indexes)\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_update_coords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_merge_raw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
